# matam_hw1

./: .gitignore  CMakeLists.txt  Open issues- to fix  Submission code  dry.docx  dry_word.docx  q2.docx  whiteboard.c
ballot/: ballot.h
election/: election.c  election.h
election/area/: .AreaNode.h.swp  AreaNode.c  AreaNode.h  area.c  area.h
election/ballot/: BallotNode.c  BallotNode.h  NodeBallot.c  NodeBallot.h
election/string_utilities/: string_utils  string_utils.c  string_utils.h
election/testing_dir_from_csl3/: CMakeLists.txt  Makefile  areaNode_test.c  area_test.c  election.c  electionExe  electionTestsExample.c  election_test.c  election_test_com.c
election/testing_dir_from_csl3/.cache/pip/wheels/d7/69/b4/3200b95828d1f0ddb3cb5699083717f4fdbd9b4223d0644c57/: psutil-5.7.0-cp36-cp36m-linux_x86_64.whl
election/testing_dir_from_csl3/.cache/vscode-cpptools/ipch/4ab1b4c068bdced3/: mtm_buggy.ipch
election/testing_dir_from_csl3/area/: AreaNode.c  CMakeLists.txt  area.c
election/testing_dir_from_csl3/include/: AreaNode.h  area.h  election.h  string_utils.h
election/testing_dir_from_csl3/map/: CMakeLists.txt
election/testing_dir_from_csl3/string_utilities/: CMakeLists.txt  string_utils.c
map/: CMakeLists.txt  Makefile  map.c  map.h  map_example_test.c  map_test.c  pair.c  pairnode.c  pairnode.h
map/include/: pair.h
map/pairnode/: pairnode.c  pairnode.h
nativ/Notebook/: firstLook
nativ/q1/: CMakeLists.txt  node.c  node.h
nativ/q2/: q2.c
q1/: node.c  node_test.c
q2/: q2
q3/: pair.h
submission_zone/: AreaNode.c  AreaNode.h  Makefile  MakefileS  area.c  area.h  election.c  makefile  string_utils.c  string_utils.h  zip_it
submission_zone/makefile_for_submission/: Makefile
submission_zone/mtm_map/: Makefile  map.c  pair.c  pairnode.c  pairnode.h
(+8 files in other folders)
